Bug 337114 - If document sent to print while table is selected, table doesn't get deselected in Print preview window - Calligra prints selection.
Summary: If document sent to print while table is selected, table doesn't get deselect...
Status: RESOLVED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: tables (other bugs)
Version First Reported In: 2.8.3
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Words Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-05 12:53 UTC by Kruno
Modified: 2014-07-05 17:29 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Table stays selected in Print preview window (3.42 KB, image/png)
2014-07-05 13:02 UTC, Kruno
Details
Selection even get printed. (10.28 KB, application/pdf)
2014-07-05 13:03 UTC, Kruno
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kruno 2014-07-05 12:53:56 UTC
If table is selected while editing, it get blue background to indicate being selected.

If you Print preview document while table being selected, you still get blue background in Print preview window. Table is showing selected in Print preview (with blue background) and that selection even get exported to a PDF if printed to file, so you end up with blue table which is actually selection, not formating and should not get printed.

Reproducible: Always

Steps to Reproduce:
1. Select table
2. Go File - Print preview while table is selected, and/or
3. Go File - Print - Print to file while table is selected
Actual Results:  
Table stayes selected in Print preview window showing blue background to indicate table being selected.

Expected Results:  
Deselect table at Print preview and show table with no backgrounds, and selection should not get printed to PDF.
Comment 1 Kruno 2014-07-05 12:55:43 UTC
Tasted with 2.4, 2.8.3 and now 2.8.5
Comment 2 Kruno 2014-07-05 13:02:15 UTC
Created attachment 87574 [details]
Table stays selected in Print preview window

Table doesn't get deselected in Print preview mode.
Comment 3 Kruno 2014-07-05 13:03:08 UTC
Created attachment 87575 [details]
Selection even get printed.

If you choose to print document to file - selection gets printed out.
Comment 4 Camilla Boemann 2014-07-05 15:28:18 UTC
Thanks for a clear bug description.

It should be rather straightforward to fix
Comment 5 Camilla Boemann 2014-07-05 17:29:48 UTC
Git commit a4dc33ee3a79b42992111160733753c81aaec237 by C. Boemann.
Committed on 05/07/2014 at 17:23.
Pushed by boemann into branch 'master'.

Make sure we don't paint the selection of tables either - if the paintcontext says we shouldn't

M  +18   -16   libs/textlayout/KoTextLayoutTableArea.cpp

http://commits.kde.org/calligra/a4dc33ee3a79b42992111160733753c81aaec237