Make sure we don't paint the selection of tables either - if the paintcontext says we shouldn't

BUG:337114